@@ -26,6 +26,7 @@ Version 2.4.0 (v2.4.0 RTM) [no release date yet]
 		-[Diagnostics] Created a public API for querying the container for diagnostic results (work item 20062)
 		-[Core] Container.InstanceCreated event added to get notified by the container when a new instance
 	     was created. (work item 19824).
+		-[Core] Container.Register<TConcrete>(Lifestyle) overload has been added. (Work item 20324).
 
 	Changes:
 		-[Core] Diagnostics moved into a separate project.
